--- a/src/pug/includes/portfolio-modal-2.pug
+++ b/src/pug/includes/portfolio-modal-2.pug
@@ -9,7 +9,7 @@
                     .row.justify-content-center
                         .col-lg-8
                             // Portfolio Modal - Title
-                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Tasty Cake
+                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Me
                             // Icon Divider
                             .divider-custom
                                 .divider-custom-line
@@ -20,7 +20,7 @@
                             img.img-fluid.rounded.mb-5(src='assets/img/portfolio/cake.png', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
-                                | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                | In the dim glow of flickering candlelight, I sit upon a throne draped in zebra skin, the spoils of a past hunt whispering of untamed lands. In my hand rests the skull of a vanquished foe—its hollow sockets forever frozen in their final gaze. Torn from the battlefield and cleansed by fire, it now serves a higher purpose: a vessel for rituals, a conduit for will and memory. Each carved sigil etched into its bone hums with power, echoing the silence that follows conquest.
                             button.btn.btn-primary(data-bs-dismiss='modal')
                                 i.fas.fa-xmark.fa-fw
                                 | Close Window
