--- a/src/pug/includes/portfolio-modal-3.pug
+++ b/src/pug/includes/portfolio-modal-3.pug
@@ -9,7 +9,7 @@
                     .row.justify-content-center
                         .col-lg-8
                             // Portfolio Modal - Title
-                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Circus Tent
+                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Evesham Abbey
                             // Icon Divider
                             .divider-custom
                                 .divider-custom-line
@@ -20,7 +20,7 @@
                             img.img-fluid.rounded.mb-5(src='assets/img/portfolio/circus.png', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
-                                | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                | Evesham Abbey, once a towering symbol of faith and order, bore silent witness to one of the most gruesome acts of vengeance in English history. After Simon de Montfort fell at the Battle of Evesham in 1265—outnumbered and betrayed—his body was not only slain but mutilated beyond recognition. Roger Mortimer, a key royalist commander, took part in the desecration. In a grotesque gesture of triumph, Montfort’s severed genitals were reportedly sent by Mortimer to his own wife, Lady Maud, as a token of victory and scorn.
                             button.btn.btn-primary(data-bs-dismiss='modal')
                                 i.fas.fa-xmark.fa-fw
                                 | Close Window
