--- a/src/pug/includes/portfolio-modal-4.pug
+++ b/src/pug/includes/portfolio-modal-4.pug
@@ -9,7 +9,7 @@
                     .row.justify-content-center
                         .col-lg-8
                             // Portfolio Modal - Title
-                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Controller
+                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Hwiccan warriors
                             // Icon Divider
                             .divider-custom
                                 .divider-custom-line
@@ -20,7 +20,7 @@
                             img.img-fluid.rounded.mb-5(src='assets/img/portfolio/game.png', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
-                                | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                | The Anglo-Saxon warriors of the Hwicce, were fierce and resilient, shaped by a land of wooded hills and river valleys. Bound by kinship and loyalty to their local lords, they fought with spears, shields, and seax blades, defending their territory against rival tribes and encroaching kingdoms. Though often overshadowed by more powerful neighbors like Mercia, the Hwiccan warriors were no less proud, steeped in pagan tradition and later Christian faith, their legacy echoing in place names and burial mounds scattered across Worcestershire and Gloucestershire.
                             button.btn.btn-primary(data-bs-dismiss='modal')
                                 i.fas.fa-xmark.fa-fw
                                 | Close Window
