--- a/src/pug/includes/portfolio-modal-6.pug
+++ b/src/pug/includes/portfolio-modal-6.pug
@@ -9,7 +9,7 @@
                     .row.justify-content-center
                         .col-lg-8
                             // Portfolio Modal - Title
-                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Submarine
+                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Belas Knap
                             // Icon Divider
                             .divider-custom
                                 .divider-custom-line
@@ -20,7 +20,7 @@
                             img.img-fluid.rounded.mb-5(src='assets/img/portfolio/submarine.png', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
-                                | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                | Belas Knap, the ancient Neolithic long barrow nestled in the misty Cotswold hills, is more than a silent tomb—it is my altar of sacrifice. Here, I offer the bodies of lost travelers, drawn into the earth’s dark embrace to fuel rituals forgotten by time. Each sacrifice binds their restless spirits to this sacred place, strengthening the ancient power that hums beneath the weathered stones. As shadows lengthen, I tend the barrow with solemn purpose, keeping the boundary between worlds alive through blood and bone.
                             button.btn.btn-primary(data-bs-dismiss='modal')
                                 i.fas.fa-xmark.fa-fw
                                 | Close Window
