--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Freelancer - Start Bootstrap Theme
+        title Hwicce net
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -28,14 +28,14 @@ html(lang='en')
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.bg-secondary.text-uppercase.fixed-top
             .container
-                a.navbar-brand(href='#page-top') Start Bootstrap
+                a.navbar-brand(href='#page-top') Hwicce
                 button.navbar-toggler.text-uppercase.font-weight-bold.bg-primary.text-white.rounded(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     | Menu 
                     i.fas.fa-bars
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ms-auto
                         li.nav-item.mx-0.mx-lg-1
-                            a.nav-link.py-3.px-0.px-lg-3.rounded(href='#portfolio') Portfolio
+                            a.nav-link.py-3.px-0.px-lg-3.rounded(href='#portfolio') Images
                         li.nav-item.mx-0.mx-lg-1
                             a.nav-link.py-3.px-0.px-lg-3.rounded(href='#about') About
                         li.nav-item.mx-0.mx-lg-1
@@ -47,7 +47,7 @@ html(lang='en')
                 // Masthead Avatar Image
                 img.masthead-avatar.mb-5(src='assets/img/avataaars.svg', alt='...')
                 // Masthead Heading
-                h1.masthead-heading.text-uppercase.mb-0 Start Bootstrap
+                h1.masthead-heading.text-uppercase.mb-0 a page about Hwicce
                 // Icon Divider
                 .divider-custom.divider-light
                     .divider-custom-line
@@ -55,13 +55,13 @@ html(lang='en')
                         i.fas.fa-star
                     .divider-custom-line
                 // Masthead Subheading
-                p.masthead-subheading.font-weight-light.mb-0 Graphic Artist - Web Designer - Illustrator
+                p.masthead-subheading.font-weight-light.mb-0 Worcestershire - Gloucestershire - Warwickshire
 
         // Portfolio Section
         section#portfolio.page-section.portfolio
             .container
                 // Portfolio Section Heading
-                h2.page-section-heading.text-center.text-uppercase.text-secondary.mb-0 Portfolio
+                h2.page-section-heading.text-center.text-uppercase.text-secondary.mb-0 Images from Hwicce
                 // Icon Divider
                 .divider-custom
                     .divider-custom-line
@@ -128,15 +128,15 @@ html(lang='en')
                 .row
                     .col-lg-4.ms-auto
                         p.lead
-                            | Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
+                            | The Hwicce was an Anglo-Saxon kingdom in early medieval England, located in what is now Gloucestershire, Worcestershire, and parts of Warwickshire and Oxfordshire. It likely formed after the Battle of Deorham in 577 AD.
                     .col-lg-4.me-auto
                         p.lead
-                            | You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
+                            | The Hwicce had both Anglo-Saxon and Romano-British roots, and their rulers played a key role in early English Christianity. Though initially independent, the kingdom was absorbed into Mercia by the late 8th century, leaving its legacy mainly in local place names.
                 // About Section Button
                 .text-center.mt-4
                     a.btn.btn-xl.btn-outline-light(href='https://startbootstrap.com/theme/freelancer/')
                         i.fas.fa-download.me-2
-                        | Free Download!
+                        | Wiki Page
 
         // Contact Section
         section#contact.page-section
@@ -242,12 +242,12 @@ html(lang='en')
                     .col-lg-4.mb-5.mb-lg-0
                         h4.text-uppercase.mb-4 Location
                         p.lead.mb-0
-                            | 2215 John Daniel Drive
+                            | Worcestershire
                             br
-                            | Clark, MO 65243
+                            | Malvern Hills
                     // Footer Social Icons
                     .col-lg-4.mb-5.mb-lg-0
-                        h4.text-uppercase.mb-4 Around the Web
+                        h4.text-uppercase.mb-4 Socials
                         a.btn.btn-outline-light.btn-social.mx-1(href='#!')
                             i.fab.fa-fw.fa-facebook-f
                         a.btn.btn-outline-light.btn-social.mx-1(href='#!')
@@ -258,16 +258,15 @@ html(lang='en')
                             i.fab.fa-fw.fa-dribbble
                     // Footer About Text
                     .col-lg-4
-                        h4.text-uppercase.mb-4 About Freelancer
+                        h4.text-uppercase.mb-4 Hwiccan Independence
                         p.lead.mb-0
-                            | Freelance is a free to use, MIT licensed Bootstrap theme created by 
-                            a(href='http://startbootstrap.com') Start Bootstrap
+                            | Hwicce will be free from the corrupt politicians in Westminster
                             | .
 
         // Copyright Section
         div.copyright.py-4.text-center.text-white
             .container
-                small Copyright &copy; Your Website 2023
+                small Copyright &copy; Metro 2025
 
         // Portfolio Modals
         include includes/portfolio-modal-1.pug
