--- a/src/pug/includes/portfolio-modal-1.pug
+++ b/src/pug/includes/portfolio-modal-1.pug
@@ -20,7 +20,7 @@
                             img.img-fluid.rounded.mb-5(src='assets/img/portfolio/cabin.png', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
-                                | The Malvern Hills rise like ancient sentinels above the English countryside, their rugged ridges and sweeping views steeped in myth and history. I stalk these hills like a mountain bandit of old, slipping through bracken and shadow, eyeing the unwary Londoner tourists as they puff their way up the slopes—soft hands gripping artisanal lattes, blissfully unaware. With a grin and a glint in my eye, I claim the high ground not with sword or pistol, but with the quiet satisfaction of one who knows every hidden path, every crag, every whispered secret of this timeless terrain.
+                                | The Malvern Hills rise like ancient sentinels above the English countryside, their rugged ridges and sweeping views steeped in myth and history. I stalk these hills like a mountain bandit of old, slipping through bracken and shadow, eyeing the unwary Londoner tourists as they puff their way up the slopes—soft hands gripping artisanal lattes, blissfully unaware. With a grin and a glint in my eye, I claim what is theirs with bow and sword, and continue on with the quiet satisfaction of one who knows every hidden path, every crag, every whispered secret of this timeless terrain.
                             button.btn.btn-primary(data-bs-dismiss='modal')
                                 i.fas.fa-xmark.fa-fw
                                 | Close Window
